--- a/Module 5/accioShop/accioShop/src/main/resources/application.properties
+++ b/Module 5/accioShop/accioShop/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+server.port=9999
