--- a/Module 5/accioShop/accioShop/src/main/resources/application.properties
+++ b/Module 5/accioShop/accioShop/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=accioShop
 spring.datasource.url=jdbc:mysql://localhost:3306/accio-shop?createTableIfNotExists=true
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
 server.port=9999
