--- a/Module 5/zwigato/zwigato/src/main/resources/application.properties
+++ b/Module 5/zwigato/zwigato/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 spring.application.name=zwigato
-spring.datasource.url=jdbc:mysql://localhost:3306/zwigato?createTableIfNotExists=true
-spring.datasource.username=root
-spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.profiles.active=prod
